--- a/wonders/pubspec.yaml
+++ b/wonders/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  firebase_core: ^2.25.5
+  firebase_auth: ^4.17.6
+  provider: ^6.1.2
+  email_validator: ^2.1.17
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
