--- a/wonders/pubspec.yaml
+++ b/wonders/pubspec.yaml
@@ -40,7 +40,15 @@ dependencies:
   provider: ^6.1.2
   email_validator: ^2.1.17
   google_sign_in: ^6.3.0
-
+  cloud_firestore: ^4.15.6
+  intl: ^0.19.0  # For date formatting
+  cached_network_image: ^3.4.0
+  http: ^1.3.0
+  firebase_storage: ^11.7.7
+  image_picker: ^1.1.2
+  google_maps_flutter: ^2.12.1
+  fl_chart: ^0.71.0
+  percent_indicator: ^4.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
